--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTM1OTE0MTQyOTY3ODU3NTY5Ng.GK5S2L.tIf-ASS5pa2-QmtffwZUx9u1eZRytcbdn24LYw
+DISCORD_TOKEN=MTM1OTE0MTQyOTY3ODU3NTY5Ng.Gvz6eJ.mqTsbKDTZv5P9wenfZGHoGNoASIVTvowAvsuI8
