--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTM1OTE0MTQyOTY3ODU3NTY5Ng.Gvz6eJ.mqTsbKDTZv5P9wenfZGHoGNoASIVTvowAvsuI8
+DISCORD_TOKEN=MTM1OTE0MTQyOTY3ODU3NTY5Ng.GhW0TJ.J_XAA5frMWEuz9-TM-SPuFZVuH89lz91Oa9pgM
