--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ pyinstaller==6.7.0
 pyinstaller-hooks-contrib==2024.6
 pyparsing==3.1.2
 pypiwin32==223
+pywin32==306; sys_platform == "win32"
 pyTelegramBotAPI==4.18.1
 python-dateutil==2.9.0.post0
 pywin32-ctypes==0.2.2
